[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/ui/Prinbles_Asset_Robin (v 1.1) (9_5_2023)/svg/Icon/Replay.svg" type="Texture" id=1]
[ext_resource path="res://assets/ui/Prinbles_Asset_Robin (v 1.1) (9_5_2023)/svg/Icon/settings.svg" type="Texture" id=2]
[ext_resource path="res://scenes/ui/InGameUI.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/SettingMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/Prinbles_Asset_Robin (v 1.1) (9_5_2023)/svg/Icon/SoundOn-1.svg" type="Texture" id=5]
[ext_resource path="res://scenes/ui/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/Comfy Feeling.otf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/ui/InputPromptMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/graphics/backgrounds/only_wood_background_no_words_cartoon_style_concise_aspect_7_4.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/information icon.png" type="Texture" id=10]
[ext_resource path="res://scenes/ui/GameInstruction.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="InGameUI" type="CanvasLayer"]
layer = -30
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 0.87451, 1, 1 )
margin_left = -72.0
margin_top = -95.0
margin_right = 1510.0
margin_bottom = 871.0
rect_scale = Vector2( 1.30085, 1.30085 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true

[node name="SettingMenu" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Volume" type="TextureButton" parent="." groups=["Button"]]
visible = false
anchor_left = 0.885
anchor_top = 0.98
anchor_right = 0.885
anchor_bottom = 0.98
margin_left = -75.2001
margin_top = -69.8
margin_right = -17.2001
margin_bottom = -0.800049
mouse_default_cursor_shape = 1
texture_normal = ExtResource( 5 )
expand = true

[node name="VolumeToolTip" type="Label" parent="."]
visible = false
anchor_left = 0.853
anchor_top = 0.897
anchor_right = 0.853
anchor_bottom = 0.897
margin_left = -118.0
margin_top = -53.0
rect_scale = Vector2( 0.948123, 1.00854 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mute or Unmute"

[node name="Settings" type="TextureButton" parent="." groups=["Button"]]
anchor_left = 0.985
anchor_top = 0.98
anchor_right = 0.985
anchor_bottom = 0.98
margin_left = -76.7998
margin_top = -77.4
margin_right = -0.799805
margin_bottom = -0.400024
rect_pivot_offset = Vector2( 37.5997, 37 )
mouse_default_cursor_shape = 1
texture_normal = ExtResource( 2 )
expand = true

[node name="SettingsToolTip" type="Label" parent="."]
visible = false
anchor_left = 0.98
anchor_top = 0.897
anchor_right = 0.98
anchor_bottom = 0.897
margin_left = -118.0
margin_top = -53.0
rect_scale = Vector2( 0.948123, 1.00854 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Settings"

[node name="Retry" type="TextureButton" parent="." groups=["Button"]]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.926
anchor_top = 0.977
anchor_right = 0.926
anchor_bottom = 0.977
margin_left = -58.9202
margin_top = -67.16
margin_right = -0.920166
margin_bottom = -1.16003
rect_pivot_offset = Vector2( 29, 34 )
mouse_default_cursor_shape = 1
texture_normal = ExtResource( 1 )
expand = true

[node name="RetryToolTip" type="Label" parent="."]
visible = false
anchor_left = 0.945
anchor_top = 0.897
anchor_right = 0.945
anchor_bottom = 0.897
margin_left = -118.0
margin_top = -53.0
rect_scale = Vector2( 0.948123, 1.00854 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Retry?"

[node name="Instruction" type="TextureButton" parent="." groups=["Button"]]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.873
anchor_top = 0.977
anchor_right = 0.873
anchor_bottom = 0.977
margin_left = -81.16
margin_top = -80.1599
margin_right = 11.84
margin_bottom = 11.84
rect_scale = Vector2( 0.92, 0.92 )
rect_pivot_offset = Vector2( 29, 34 )
mouse_default_cursor_shape = 1
texture_normal = ExtResource( 10 )
expand = true

[node name="IntructionToolTip" type="Label" parent="."]
visible = false
anchor_left = 0.868
anchor_top = 0.897
anchor_right = 0.868
anchor_bottom = 0.897
margin_left = -118.0
margin_top = -53.0
rect_scale = Vector2( 0.948123, 1.00854 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Instruction"

[node name="InputPromptMenu" parent="." instance=ExtResource( 8 )]
layer = -1

[node name="GameInstruction" parent="." instance=ExtResource( 11 )]
unique_name_in_owner = true
visible = false

[connection signal="show_pause_menu" from="SettingMenu" to="." method="_on_SettingMenu_show_pause_menu"]
[connection signal="mouse_entered" from="Volume" to="." method="_on_Volume_mouse_entered"]
[connection signal="mouse_exited" from="Volume" to="." method="_on_Volume_mouse_exited"]
[connection signal="pressed" from="Volume" to="." method="_on_Volume_pressed"]
[connection signal="mouse_entered" from="Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Retry" to="." method="_on_Retry_mouse_entered"]
[connection signal="mouse_exited" from="Retry" to="." method="_on_Retry_mouse_exited"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="mouse_entered" from="Instruction" to="." method="_on_Instruction_mouse_entered"]
[connection signal="mouse_exited" from="Instruction" to="." method="_on_Instruction_mouse_exited"]
[connection signal="pressed" from="Instruction" to="." method="_on_Instruction_pressed"]
